# FaceRecognition-ZenML-FastAPI

./: .gitignore  README.md  pyproject.toml
components/: database.py  dataset.py  exceptions.py  ingestor.py  loader.py  preprocess.py
components/siamese_model/: SiameseModel.py  functions.py
mlruns/0/: meta.yaml
mlruns/0/6e63266ad90d4068b5056223cf5a485e/: meta.yaml
mlruns/0/6e63266ad90d4068b5056223cf5a485e/artifacts/encoder/: MLmodel
mlruns/0/6e63266ad90d4068b5056223cf5a485e/artifacts/siamese_network/: MLmodel  conda.yaml  python_env.yaml
mlruns/0/6e63266ad90d4068b5056223cf5a485e/metrics/: average_loss
mlruns/0/6e63266ad90d4068b5056223cf5a485e/tags/: mlflow.log-model.history  mlflow.source.git.commit  mlflow.source.name
mlruns/0/9a0d1c9c2fb143438c078f77d6c88b52/: meta.yaml
mlruns/0/9a0d1c9c2fb143438c078f77d6c88b52/tags/: mlflow.runName
mlruns/0/ecbdf59ece6e46bb9dd610e7bfc57ec5/: meta.yaml
mlruns/0/ecbdf59ece6e46bb9dd610e7bfc57ec5/metrics/: average_loss
mlruns/0/ecbdf59ece6e46bb9dd610e7bfc57ec5/tags/: mlflow.runName  mlflow.source.git.commit
pipelines/: train_pipeline.py
siamese_model/: DistanceLayer.py  SiameseModel.py  functions.py
steps/: create_triplet_dataset.py  create_triplets.py  download_dataset.py  ingest_dataset.py  load_images.py  prepare_dataset.py  prepare_triplets.py  register_database.py  training.py
tests/: test_create_new_siamese_model.py  test_create_siamese_model.py  test_data_ingestor.py  test_data_loader.py  test_dataset.py  test_steps_pipeline_train.py
